from skype-button class to skype-chat

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
   h1= title
-  span(class="skype-button bubble" data-contact-id="paul.mesnilgrente") 
+  span(class="skype-chat bubble" data-contact-id="funkystuff99") 
 
